--- a/Css/style.css
+++ b/Css/style.css
@@ -436,9 +436,9 @@ h6 {
 }
 
 #about p {
-  font-size: 17px;
+  font-size: 1.25rem;
   font-weight: 400;
-  line-height: 25px;
+  line-height: 1.5;
 }
 
 /* hexagon image */
